--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>Quiz app</h1>
+
+    <div class="frame">
+        
+    </div>
+
 </body>
 </html>
