--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <h1>Quiz app</h1>
 
     <div class="frame">
-        
+        <div class="question">
+            
+        </div>
     </div>
 
 </body>
