--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 
     <div class="frame">
         <div class="question">
+
+        </div>
+
+        <div class="answer">
             
         </div>
     </div>
