--- a/index.html
+++ b/index.html
@@ -11,11 +11,15 @@
 
     <div class="frame">
         <div class="question">
-
+            <h2>Q. who is the main character of dragon ball?</h2>
         </div>
 
         <div class="answer">
-            
+            <div class="options">Naruto</div>
+            <div class="options">Ichigo</div>
+            <div class="options">Goku</div>
+            <div class="options">Luffy</div>
+
         </div>
     </div>
 
