--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         </div>
 
         <div class="answer">
-            <div class="options">Naruto</div>
-            <div class="options">Ichigo</div>
-            <div class="options">Goku</div>
-            <div class="options">Luffy</div>
+            <div class="options">A. Naruto</div>
+            <div class="options">B. Ichigo</div>
+            <div class="options">C. Goku</div>
+            <div class="options">D. Luffy</div>
 
         </div>
     </div>
