--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 
     <div class="frame">
         <div class="question">
-            <h2>Q. who is the main character of dragon ball?</h2>
+            <h2>Q. This is a question.</h2>
         </div>
 
         <div class="answer">
-            <div class="options">A. Naruto</div>
-            <div class="options">B. Ichigo</div>
-            <div class="options">C. Goku</div>
-            <div class="options">D. Luffy</div>
+            <div class="options">A. Option a</div>
+            <div class="options">B. Option b</div>
+            <div class="options">C. Option c</div>
+            <div class="options">D. Option D</div>
 
         </div>
     </div>
