--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <div class="frame">
         <div class="question">
-            <h2>Q. This is a question.</h2>
+            <h2 id="question">This is a question.</h2>
         </div>
 
         <div class="answer">
@@ -22,6 +22,8 @@
 
         </div>
     </div>
+
+    <script src="script.js"></script>
 
 </body>
 </html>
