--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         </div>
 
         <div class="answer">
-            <div class="options">A. Option a</div>
-            <div class="options">B. Option b</div>
-            <div class="options">C. Option c</div>
-            <div class="options">D. Option D</div>
+            <div class="options" id="opt1">A. Option a</div>
+            <div class="options" id="opt2">B. Option b</div>
+            <div class="options" id="opt3">C. Option c</div>
+            <div class="options" id="opt4">D. Option D</div>
 
         </div>
     </div>
