--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Quiz app</h1>
 
-    <div class="frame">
+    <!-- <div class="frame">
         <div class="question">
             <h2 id="question">This is a question.</h2>
         </div>
@@ -20,7 +20,7 @@
             <div class="options" id="opt3">C. Option c</div>
             <div class="options" id="opt4">D. Option D</div>
         </div>
-    </div>
+    </div> -->
 
     <script src="script.js"></script>
 
